# FastAPI-demo

./: README.md  main.py  pyproject.toml
.github/workflows/: main.yml
